# svg-syntax-highlighting-zed

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/svg/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm
src/: lib.rs
